# lm-pub-quiz

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
api/base_classes/: index.html
api/dataset/: index.html
api/evaluator/: index.html
api/model_interfaces/: index.html
api/result/: index.html
cli/: index.html
data_files/: index.html
development/: index.html
docs/: api.md  cli.md  data_files.md  development.md  example.md  index.md  intergration.md  trainer_integration.md
docs/api/: base_classes.md  dataset.md  evaluator.md  model_interfaces.md  result.md
docs/stylesheets/: extra.css
example/: index.html
examples/: direct_evaluation.py  multi_gpu.py  retrieve_results.py
examples/gpt2_results/: P103_results.jsonl  P105_results.jsonl  P108_results.jsonl  P115_results.jsonl  P127_results.jsonl  P1303_results.jsonl  P131_results.jsonl  P1376_results.jsonl  P137_results.jsonl  P1412_results.jsonl  P1441_results.jsonl  P1532_results.jsonl  P162_results.jsonl  P170_results.jsonl  P171_results.jsonl  P175_results.jsonl  P176_results.jsonl  P177_results.jsonl  P178_results.jsonl  P179_results.jsonl  P185_results.jsonl  P190_results.jsonl  P19_results.jsonl  P206_results.jsonl  P20_results.jsonl  P2632_results.jsonl  P26_results.jsonl  P272_results.jsonl  P27_results.jsonl  P291_results.jsonl  P30_results.jsonl  P3373_results.jsonl  P344_results.jsonl  P364_results.jsonl  P36_results.jsonl  P37_results.jsonl  P403_results.jsonl  P412_results.jsonl  P413_results.jsonl  P427_results.jsonl  (+21 more)
intergration/: index.html
overrides/partials/: header.html
search/: search_index.json
src/lm_pub_quiz/: __init__.py  evaluator.py  integration.py  templating.py  types.py  tyq_evaluator.py  util.py
src/lm_pub_quiz/cli/: __init__.py  config.py  evaluate_model.py  rank_answers.py  score_sentence.py
src/lm_pub_quiz/data/: __init__.py  base.py  dataset.py  results.py  util.py
src/lm_pub_quiz/evaluators/: __init__.py  base.py  model_util.py  pll_evaluators.py  scorers.py  scoring_mixins.py  templating_util.py  tyq_evaluator.py  util.py
src/lm_pub_quiz/integrations/: __init__.py  transformers_trainer.py
src/lm_pub_quiz/metrics/: __init__.py  base.py  basic.py  confidence.py  util.py
src/lm_pub_quiz/model_interface/: __init__.py  base.py  vllm.py
src/lm_pub_quiz/model_interface/hf/: __init__.py  base.py  clm.py  mlm.py  tyq.py  util.py
stylesheets/: extra.css
tests/: conftest.py  test_cli.py  test_dataset_representation.py  test_evaluation.py  test_iterable_recomposition.py  test_metrics.py  test_model_interface.py  test_result_representation.py  test_scorer.py  test_scoring_mixins.py  test_template_indices.py  test_templating.py  test_transformers_trainer_integration.py  test_tyq_evaluator.py
tests/test_data/: dummy_relation_info.json
tests/test_data/dummy_dataset_multiple_templates/: example_1.jsonl  example_2.jsonl  metadata_relations.json
tests/test_data/dummy_dataset_with_additional_files/: README.md  metadata_relations.json
tests/test_data/new_style_results/: example_1_results.jsonl  example_2_results.jsonl  metadata.json  metadata_relations.json
tests/test_data/new_style_results_with_mistakes/: example_2_results.jsonl  metadata.json  metadata_relations.json  metadata_results.json
tests/test_data/old_style_results_reduced/: example_1_results.jsonl  example_2_results.jsonl  metadata_results.json
tests/test_data/old_style_results_with_indices/: example_1_results.jsonl  example_2_results.jsonl  metadata_results.json
trainer_integration/: index.html
